Bug 75874 - Failed to send out specific PropertiesChanged signal for <all>.service: Transport endpoint is not connected
Summary: Failed to send out specific PropertiesChanged signal for <all>.service: Trans...
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-07 06:21 UTC by Gerardo Exequiel Pozzi
Modified: 2014-03-11 03:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
log of the shutdown process (17.04 KB, text/plain)
2014-03-07 06:21 UTC, Gerardo Exequiel Pozzi
Details

Description Gerardo Exequiel Pozzi 2014-03-07 06:21:59 UTC
Created attachment 95289 [details]
log of the shutdown process

On shutdown, randomly I get this message for all service units in my system. Looks like does not cause any harm.
If more info is needed, please let me know.


Arch Linux running systemd-210-3 on x86_64.
Comment 1 Lennart Poettering 2014-03-11 03:20:52 UTC
Fixed in git.

(Mostly cosmetic though, you may safely ignore this issue)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.